--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 50%;
 }
 .prize-block {
     max-width: 50%;
